src/objects/ADvendio__Advertised_Brand__c.object
<CustomObject>
    <fields>
        <fullName>ADvendio__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Enter the name of the Account that advertises for this brand.</description>
        <inlineHelpText>Enter the name of the Account that advertises for this brand.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Advertised Brands</relationshipLabel>
        <relationshipName>AdvertisedBrands</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__ParentAdvertisedBrandProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To build hierarchies please chose here the Parent Advertised Brand or Product.</description>
        <inlineHelpText>To build hierarchies please chose here the Parent Advertised Brand or Product.</inlineHelpText>
        <label>Parent Advertised Brand/Product</label>
        <referenceTo>ADvendio__Advertised_Brand__c</referenceTo>
        <relationshipLabel>Sub Brands/Products</relationshipLabel>
        <relationshipName>AdvertisedBrands</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__Type__c</fullName>
        <description>Use to differ between advertising Products and advertising Brands.</description>
        <inlineHelpText>Please choose Product for advertising Products and Brand for advertising Brands.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Brand</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>P7S1_IdOld__c</fullName>
        <description>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</description>
        <inlineHelpText>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</inlineHelpText>
        <label>P7S1_IdOld</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Advertised Brand</label>
    <listViews>
        <fullName>ADvendio__AllAdvertisedBrands</fullName>
        <columns>NAME</columns>
        <columns>ADvendio__Type__c</columns>
        <columns>ADvendio__Account__c</columns>
        <columns>ADvendio__ParentAdvertisedBrandProduct__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Advertised Brand Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Advertised Brands</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>